<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.log.DaftarActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/telp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telp"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/nama"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelpDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintTop_toBottomOf="@id/telp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/ETATextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/conPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conPassword"
        style="@style/ETATextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/btnDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConPasswordDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/con_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>