<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.edit.EditSecurityActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/conPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conPassword"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ETAInputError"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/con_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.eta.view.ProgressButton
        android:id="@+id/btnSubmit"
        style="@style/ETAButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        app:enabled="false"
        app:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>