<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/colorPrimary"
    tools:context=".app.log.MasukActivity">

    <ImageSwitcher
        android:id="@+id/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        tools:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_black_to_transparent"
        app:layout_constraintTop_toTopOf="@id/wallpaper"
        app:layout_constraintBottom_toBottomOf="@id/wallpaper"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        android:layout_margin="36dp"
        android:src="@drawable/logo_eta"
        app:layout_constraintBottom_toBottomOf="@id/wallpaper"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/wallpaper"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/ETATextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toTopOf="@id/btnMasuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRegister" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dont_have_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMasuk"
        app:layout_constraintTop_toTopOf="@id/btnMasuk"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>