<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.edit.EditProfileActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/img_morning"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/changePhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/shape_round"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@id/photo"
        app:layout_constraintStart_toStartOf="@id/photo"
        app:layout_constraintEnd_toEndOf="@id/photo">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_photo_24"
            android:tint="@android:color/white"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/photo"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/ETATextInputLayout"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelpEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@android:color/darker_gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>