<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.main.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/img_morning"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/ETATextView.Title"
                android:layout_marginTop="16dp"
                android:text="@string/bus_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/message"
                style="@style/ETATextView.Value"
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:layout_marginStart="12dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="@string/eta"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/infoActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/message">

                <ImageView
                    android:id="@+id/icLatLng"
                    style="@style/ETAIcon"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_coordinate_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvLat"
                    style="@style/ETATextView.Subtitle"
                    app:layout_constraintTop_toTopOf="@id/icLatLng"
                    app:layout_constraintBottom_toBottomOf="@id/icLatLng"
                    app:layout_constraintStart_toEndOf="@id/icLatLng"
                    app:layout_constraintEnd_toStartOf="@id/lat"
                    android:text="@string/latitude"/>

                <TextView
                    android:id="@+id/tvLng"
                    style="@style/ETATextView.Subtitle"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/lat"
                    app:layout_constraintStart_toEndOf="@id/icLatLng"
                    app:layout_constraintEnd_toStartOf="@id/lng"
                    android:text="@string/longitude"/>

                <TextView
                    android:id="@+id/lat"
                    style="@style/ETATextView.Value"
                    app:layout_constraintTop_toTopOf="@id/tvLat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvLat"
                    tools:text="-7.2630178" />

                <TextView
                    android:id="@+id/lng"
                    style="@style/ETATextView.Value"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/lat"
                    app:layout_constraintStart_toEndOf="@id/tvLng"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="138.98439"/>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/lng"/>

                <ImageView
                    android:id="@+id/icPos"
                    style="@style/ETAIcon"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_map_24"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvPos"
                    style="@style/ETATextView.Subtitle"
                    android:text="@string/position"
                    app:layout_constraintTop_toTopOf="@id/icPos"
                    app:layout_constraintBottom_toBottomOf="@id/icPos"
                    app:layout_constraintStart_toEndOf="@id/icPos"
                    app:layout_constraintEnd_toStartOf="@id/pos"/>

                <TextView
                    android:id="@+id/pos"
                    style="@style/ETATextView.Value"
                    app:layout_constraintTop_toTopOf="@id/tvPos"
                    app:layout_constraintStart_toEndOf="@id/tvPos"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Halte"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/pos"/>

                <ImageView
                    android:id="@+id/icSpeed"
                    style="@style/ETAIcon"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_speed_24"
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvSpeed"
                    style="@style/ETATextView.Subtitle"
                    android:text="@string/speed"
                    app:layout_constraintTop_toTopOf="@id/icSpeed"
                    app:layout_constraintBottom_toBottomOf="@id/icSpeed"
                    app:layout_constraintStart_toEndOf="@id/icSpeed"
                    app:layout_constraintEnd_toStartOf="@id/speed"/>

                <TextView
                    android:id="@+id/speed"
                    style="@style/ETATextView.Value"
                    app:layout_constraintTop_toTopOf="@id/tvSpeed"
                    app:layout_constraintStart_toEndOf="@id/tvSpeed"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="30 km/jam"/>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/speed"/>

                <ImageView
                    android:id="@+id/icEta"
                    style="@style/ETAIcon"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_time_24"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvEta"
                    style="@style/ETATextView.Subtitle"
                    android:text="@string/eta"
                    app:layout_constraintTop_toTopOf="@id/icEta"
                    app:layout_constraintBottom_toBottomOf="@id/icEta"
                    app:layout_constraintStart_toEndOf="@id/icEta"
                    app:layout_constraintEnd_toStartOf="@id/eta"/>

                <TextView
                    android:id="@+id/eta"
                    style="@style/ETATextView.Value"
                    app:layout_constraintTop_toTopOf="@id/icEta"
                    app:layout_constraintStart_toEndOf="@id/tvEta"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="2 menit"/>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/eta"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/selamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        tools:text="Selamat pagi, "
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nickname" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:text="Nino!"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/refresh"
        app:layout_constraintStart_toEndOf="@id/selamat"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>